# cpp_project

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main.cpp
include/investing/: candle.h
src/: CMakeLists.txt
src/investing/: candle.cpp
